[gd_scene load_steps=10 format=2]

[ext_resource path="res://balloon/balloon.svg" type="Texture" id=1]
[ext_resource path="res://balloon/Balloon.gd" type="Script" id=2]
[ext_resource path="res://balloon/balloon-cloth.png" type="Texture" id=3]
[ext_resource path="res://balloon/balloon-basket.png" type="Texture" id=4]
[ext_resource path="res://sfx/Death.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

//void vertex() {
//	vec2 v = VERTEX;
//	v.x += 10.0*sin(v.y*TIME*0.001);
//	VERTEX = v;
//}

void fragment() {
	vec4 col = texture(TEXTURE, vec2(UV.x+(sin(UV.y*20.+TIME)*0.002), UV.y));
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 114.998

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41.9769, 34.551 )

[node name="Balloon" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 29.8788, -138.092 )
scale = Vector2( 0.611565, 0.611565 )
texture = ExtResource( 1 )

[node name="balloon-basket" type="Sprite" parent="."]
position = Vector2( -1.198, -38.463 )
scale = Vector2( 0.465603, 0.465603 )
texture = ExtResource( 4 )

[node name="balloon-cloth" type="Sprite" parent="."]
position = Vector2( -0.711244, -201.155 )
scale = Vector2( 0.385694, 0.385694 )
texture = ExtResource( 3 )

[node name="CollisionShapeBalloon" type="CollisionShape2D" parent="."]
position = Vector2( -0.529709, -200.785 )
shape = SubResource( 3 )
disabled = true

[node name="CollisionShapeBacket" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="BalloonArea" type="Area2D" parent="."]
collision_layer = 34
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="BalloonArea"]
position = Vector2( -0.529709, -200.785 )
shape = SubResource( 3 )

[node name="PopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="BalloonArea" to="." method="_on_BalloonArea_body_entered"]
